# ecomegane

./: LICENSE.md  README.md  setup.cfg
docs/: sample.py
ecomegane/: __init__.py  ecomegane.py
