[metadata]
name = ecomegane
version = 1.0.0
author = Dan Liberatori
author_email = daniel.liberatori@gmail.com
description = Download data from Eco-Megane PV monitoring platform.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dliberat/ecomegane
project_urls =
    Bug Tracker = https://github.com/dliberat/ecomegane/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests
    beautifulsoup4
    lxml